--- a/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
+++ b/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
@@ -13,6 +13,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:visibility="visible"
+    android:nestedScrollingEnabled="true"
     tools:context="ift2905.moviebucket.MovieView">
 
 
