--- a/MovieBucket/app/src/main/res/layout/content_movie_view_tv.xml
+++ b/MovieBucket/app/src/main/res/layout/content_movie_view_tv.xml
@@ -192,10 +192,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="false"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_theaters_black_24dp"
+                    android:drawableLeft="@drawable/check"
                     android:drawablePadding="7dp"
                     android:gravity="left|center_vertical"
-                    android:text="+ My Bucket"
+                    android:text="@string/add_bucket_button"
                     android:textSize="10sp" />
 
                 <Button
@@ -203,10 +203,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_history_black_24dp"
+                    android:drawableLeft="@drawable/check"
                     android:drawablePadding="7dp"
                     android:gravity="left|center_vertical"
-                    android:text="+ My History"
+                    android:text="@string/add_history_button"
                     android:textSize="10sp" />
 
                 <Button
@@ -217,7 +217,7 @@
                     android:drawableLeft="@drawable/ic_date_range_black_24dp"
                     android:drawablePadding="7dp"
                     android:gravity="left|center_vertical"
-                    android:text="+ My Calendar"
+                    android:text="@string/calendar_button"
                     android:textSize="10sp" />
 
             </LinearLayout>
