4PM commit for sexy people: icons/popup menus cleaned up for consistency
Details for people who know their alphabet:
>Titles are now clickable to start movie view activity for a more intuitive
User experience (more details has been removed from popup menu)

>icons added to My History list for consistency

--- a/MovieBucket/app/src/main/res/layout/mylist_row_item_view.xml
+++ b/MovieBucket/app/src/main/res/layout/mylist_row_item_view.xml
@@ -7,6 +7,15 @@
     android:orientation="horizontal">
 
         <ift2905.moviebucket.BadassImageButton
+            android:id="@+id/checked"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:layout_weight="0"
+            android:background="@null"
+            app:srcCompat="@drawable/ic_done_black_24dp" />
+
+        <ift2905.moviebucket.BadassImageButton
             android:id="@+id/star"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -15,7 +24,7 @@
             android:background="@null"
             app:srcCompat="@drawable/ic_star_black_24dp" />
 
-        <TextView
+        <ift2905.moviebucket.IntuitiveTextView
             android:id="@+id/mytitle"
             android:layout_weight="3"
             android:layout_height="match_parent"
