--- a/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
+++ b/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
@@ -47,7 +47,7 @@
                 <ImageView
                     android:id="@+id/moviePoster"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
@@ -189,11 +189,11 @@
                 <Button
                     android:id="@+id/buttonAddMb"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_alignParentEnd="false"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/check"
-                    android:drawablePadding="7dp"
+                    android:drawablePadding="3dp"
                     android:gravity="left|center_vertical"
                     android:text="@string/add_bucket_button"
                     android:textSize="10sp" />
@@ -204,7 +204,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/check"
-                    android:drawablePadding="7dp"
+                    android:drawablePadding="3dp"
                     android:gravity="left|center_vertical"
                     android:text="@string/add_history_button"
                     android:textSize="10sp" />
@@ -215,7 +215,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/ic_date_range_black_24dp"
-                    android:drawablePadding="7dp"
+                    android:drawablePadding="3dp"
                     android:gravity="left|center_vertical"
                     android:text="@string/calendar_button"
                     android:textSize="10sp" />
