--- a/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
+++ b/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
@@ -28,17 +28,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/movieTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
-                android:paddingBottom="15dp"
-                android:paddingTop="5dp"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -65,6 +54,32 @@
                     android:orientation="vertical"
                     android:paddingLeft="15dp"
                     android:weightSum="1">
+
+                    <LinearLayout
+                        android:id="@+id/titleContainer"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.13"
+                        android:orientation="vertical"
+                        android:paddingBottom="7dp">
+
+                        <TextView
+                            android:id="@+id/titleTitle"
+                            style="@android:style/Widget.TextView.SpinnerItem"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Title" />
+
+                        <TextView
+                            android:id="@+id/movieTitle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentStart="true"
+                            android:text="-" />
+
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/yearContainer"
@@ -169,7 +184,6 @@
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentStart="true"
                             android:layout_below="@+id/genreTitle"
-                            android:inputType="textMultiLine"
                             android:text="-" />
 
                     </LinearLayout>
@@ -247,7 +261,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/overviewTitle"
                 android:layout_weight="1"
-                android:inputType="textMultiLine"
                 android:text="-" />
         </LinearLayout>
 
@@ -380,7 +393,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_column="0"
-                        android:inputType="textMultiLine"
                         android:paddingRight="3dp"
                         android:paddingTop="3dp"
                         android:text="" />
@@ -391,7 +403,6 @@
                         android:layout_height="wrap_content"
                         android:layout_column="1"
                         android:gravity="right"
-                        android:inputType="textMultiLine"
                         android:paddingRight="15dp"
                         android:paddingTop="3dp"
                         android:text="" />
@@ -408,7 +419,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_column="0"
-                        android:inputType="textMultiLine"
                         android:paddingRight="3dp"
                         android:paddingTop="3dp"
                         android:text="" />
@@ -419,7 +429,6 @@
                         android:layout_height="wrap_content"
                         android:layout_column="1"
                         android:gravity="right"
-                        android:inputType="textMultiLine"
                         android:paddingRight="15dp"
                         android:paddingTop="3dp"
                         android:text="" />
@@ -436,7 +445,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_column="0"
-                        android:inputType="textMultiLine"
                         android:paddingRight="3dp"
                         android:paddingTop="3dp"
                         android:text="" />
@@ -447,7 +455,6 @@
                         android:layout_height="wrap_content"
                         android:layout_column="1"
                         android:gravity="right"
-                        android:inputType="textMultiLine"
                         android:paddingRight="15dp"
                         android:paddingTop="3dp"
                         android:text="" />
