--- a/MovieBucket/app/src/main/res/layout/activity_movie_view_m.xml
+++ b/MovieBucket/app/src/main/res/layout/activity_movie_view_m.xml
@@ -32,8 +32,7 @@
             android:orientation="vertical" >
 
             <include
-                layout="@layout/content_movie_view_m"
-                android:layout_width="match_parent" />
+                layout="@layout/content_movie_view_m" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
