Polishing dem settings

--- a/MovieBucket/app/src/main/res/values/arrays.xml
+++ b/MovieBucket/app/src/main/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="locale">
         <item>English</item>
-        <item>French</item>
+        <item>Français</item>
     </string-array>
 
     <string-array name="locale_values">
