--- a/MovieBucket/app/src/main/res/menu/popup_menu_my_bucket.xml
+++ b/MovieBucket/app/src/main/res/menu/popup_menu_my_bucket.xml
@@ -4,17 +4,17 @@
 
     <item
         android:id="@+id/markAsViewed"
-        android:title="Mark as viewed"
+        android:title="@string/list_viewed"
         app:srcCompat="@drawable/ic_remove_red_eye_black_24dp" />
 
     <item
         android:id="@+id/schedule"
-        android:title="Schedule"
+        android:title="@string/list_schedule"
         app:srcCompat="@drawable/ic_date_range_black_24dp" />
 
     <item
         android:id="@+id/delete"
-        android:title="Remove from list"
+        android:title="@string/list_remove"
         app:srcCompat="@drawable/ic_close_black_24dp" />
 
 </menu>
