Secured fetchers for offline mode and code cleanup

--- a/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
+++ b/MovieBucket/app/src/main/res/layout/content_movie_view_m.xml
@@ -43,6 +43,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignWithParentIfMissing="false"
                     android:layout_weight="1"
+                    android:src="@drawable/placeholder"
                     android:isScrollContainer="false"
                     android:padding="2dp" />
 
