--- a/MovieBucket/app/src/main/res/drawable/placeholder.xml
+++ b/MovieBucket/app/src/main/res/drawable/placeholder.xml
@@ -1,9 +1,17 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient
-        android:angle="135"
-        android:centerColor="#D3D3D3"
-        android:endColor="#DCDCDC"
-        android:startColor="#DCDCDC"
-        android:type="linear" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#DCDCDC"/>
+        </shape>
+    </item>
+    <item
+        android:drawable="@drawable/ic_filter_hdr_black_50dp"
+        android:bottom="20dp"
+        android:left="20dp"
+        android:right="20dp"
+        android:top="20dp"
+        android:gravity="center"/>
+</layer-list>
+
+
+
