--- a/MovieBucket/app/src/main/res/layout/fake_popup_menu_bucket.xml
+++ b/MovieBucket/app/src/main/res/layout/fake_popup_menu_bucket.xml
@@ -19,7 +19,7 @@
             app:srcCompat="@drawable/ic_done_black_24dp" />
 
         <TextView
-            android:text="Mark as viewed"
+            android:text="@string/list_viewed"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="3"
@@ -41,7 +41,7 @@
             app:srcCompat="@drawable/ic_date_range_black_24dp" />
 
         <TextView
-            android:text="Schedule"
+            android:text="@string/list_schedule"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="3"
@@ -63,7 +63,7 @@
             app:srcCompat="@drawable/ic_close_black_24dp" />
 
         <TextView
-            android:text="Remove from list"
+            android:text="@string/list_remove"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="3"
