--- a/MovieBucket/app/src/main/res/layout/fake_popup_menu_history.xml
+++ b/MovieBucket/app/src/main/res/layout/fake_popup_menu_history.xml
@@ -2,51 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="200dp"
+    android:layout_width="150dp"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF">
+    android:background="#21FFFFFF">
 
-    <LinearLayout
+    <Button
         android:id="@+id/schedule"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:drawableStart="@drawable/ic_date_range_black_24dp"
+        android:text="@string/list_schedule"
+        android:textSize="12sp" />
 
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_date_range_black_24dp" />
-
-        <TextView
-            android:text="@string/list_schedule"
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="3"
-            android:gravity="start|center_vertical"
-            android:textColor="#000000"/>
-    </LinearLayout>
-
-    <LinearLayout
+    <Button
         android:id="@+id/delete"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_close_black_24dp" />
-
-        <TextView
-            android:text="@string/list_remove"
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="3"
-            android:gravity="start|center_vertical"
-            android:textColor="#000000"/>
-    </LinearLayout>
+        android:drawableStart="@drawable/ic_close_black_24dp"
+        android:text="@string/list_remove"
+        android:textSize="12sp" />
 </LinearLayout>
