--- a/MovieBucket/app/src/main/res/drawable/check.xml
+++ b/MovieBucket/app/src/main/res/drawable/check.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_add_grey_24dp"
-        android:state_enabled="false"/>
-    <item android:drawable="@drawable/ic_add_black_24dp"
-        android:state_selected="false" />
-    <item android:drawable="@drawable/ic_remove_black_24dp"
-        android:state_selected="true"/>
 
 
+    <item android:state_enabled="false" android:drawable="@drawable/ic_add_grey_24dp" />
+    <item android:state_selected="false" android:drawable="@drawable/ic_add_black_24dp" />
+    <item android:state_selected="true" android:drawable="@drawable/ic_remove_black_24dp" />
 </selector>
