--- a/MovieBucket/app/src/main/res/layout/aboot_fragment_eh.xml
+++ b/MovieBucket/app/src/main/res/layout/aboot_fragment_eh.xml
@@ -14,16 +14,29 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/textView4"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/textView3"
-                android:layout_marginTop="26dp"
-                android:layout_weight="0.17"
-                android:text="@string/about_devs"
-                android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/textView3"
+                    android:layout_marginTop="26dp"
+                    android:layout_weight="1"
+                    android:text="@string/about_devs"
+                    android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_logo_primary_dark" />
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/textView3"
@@ -39,7 +52,7 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
-                android:layout_height="53dp"
+                android:layout_height="48dp"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/textView6"
                 android:layout_marginTop="21dp"
@@ -53,7 +66,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/textView4"
                 android:layout_marginTop="28dp"
-                android:layout_weight="0.17"
+                android:layout_weight="0.15"
                 android:text="@string/about_thanks"
                 android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
 
@@ -63,7 +76,7 @@
                 android:layout_height="71dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_weight="0.17" />
+                android:layout_weight="0.24" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -89,7 +102,8 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_marginStart="248dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:layout_alignParentBottom="true" />
 
             </RelativeLayout>
         </LinearLayout>
